add baidu tongji

--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
         min-height: 960px;
     }
     </style>
+
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+           var hm = document.createElement("script");
+           hm.src = "https://hm.baidu.com/hm.js?b1a8a2e400fe7b70019ca2072f9af53c";
+           var s = document.getElementsByTagName("script")[0];
+           s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
   </body>
 </html>
